@@ -824,5 +824,6 @@
 		new loops added in 'ke_process_events'.
 	* src/libm2skernel/syscall.c: system calls 'setitimer', 'getitimer' implemented.
 	* src/libm2skernel/syscall.c: system call 'select' implemented (for tv = 0).
+	* src/libm2skernel/signal.c: flag 'SA_RESTART' for sigaction restarting system calls.
 
 
